# beyblade-x-app

./: .dockerignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  run-backend.sh
.github/workflows/: build.yml
docs/: deployment_guide.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: beyparts.json  commands.rs  db.rs  lib.rs  main.rs  server.rs
src/components/battle/: BattleAnimation.tsx
src/components/beys/: CreateCustomBeyModal.tsx
src/components/common/: Modal.tsx  ToastContainer.tsx
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/data/: arenas.ts  beys.ts  parts.ts
src/pages/: Arenas.tsx  Beys.tsx  Bladers.tsx  Home.tsx  Officina.tsx  Settings.tsx  TournamentDetail.tsx  Tournaments.tsx  Versus.tsx
src/services/: api.ts
src/store/: index.ts
src/types/: index.ts
